--- a/turbo.json
+++ b/turbo.json
@@ -79,6 +79,7 @@
     "GITHUB_API_REPO_TOKEN",
     "GOOGLE_API_CREDENTIALS",
     "GOOGLE_LOGIN_ENABLED",
+    "GOOGLE_WEBHOOK_URL",
     "GOOGLE_WEBHOOK_TOKEN",
     "HEROKU_APP_NAME",
     "HUBSPOT_CLIENT_ID",
