Add app store URL to .env

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,7 @@ NEXT_PUBLIC_WEBAPP_URL='http://localhost:3000'
 NEXT_PUBLIC_WEBSITE_URL='http://localhost:3000'
 NEXT_PUBLIC_CONSOLE_URL='http://localhost:3004'
 NEXT_PUBLIC_EMBED_LIB_URL='http://localhost:3000/embed/embed.js'
+NEXT_PUBLIC_APP_STORE_URL='http://localhost:3001'
 
 # To enable SAML login, set both these variables
 # @see https://github.com/calcom/cal.com/tree/main/packages/features/ee#setting-up-saml-login
