--- a/turbo.json
+++ b/turbo.json
@@ -98,6 +98,7 @@
     "MS_GRAPH_CLIENT_SECRET",
     "NEXT_PUBLIC_API_URL",
     "NEXT_PUBLIC_APP_NAME",
+    "NEXT_PUBLIC_APP_STORE_URL",
     "NEXT_PUBLIC_AUTH_URL",
     "NEXT_PUBLIC_CALCOM_VERSION",
     "NEXT_PUBLIC_COMPANY_NAME",
