--- a/turbo.json
+++ b/turbo.json
@@ -257,7 +257,9 @@
     "NEXT_PUBLIC_API_V2_URL",
     "NEXT_PUBLIC_WEBAPP_URL",
     "NEXT_PUBLIC_WEBSITE_URL",
-    "BUILD_STANDALONE"
+    "BUILD_STANDALONE",
+    "TRIGGER_SECRET_KEY",
+    "TRIGGER_API_URL"
   ],
   "tasks": {
     "@calcom/prisma#build": {
