--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@calcom/web",
-  "version": "5.6.13",
+  "version": "5.6.12",
   "private": true,
   "scripts": {
     "analyze": "ANALYZE=true next build",
@@ -23,7 +23,7 @@
     "lint:report": "eslint . --format json --output-file ../../lint-results/web.json",
     "check-changed-files": "ts-node scripts/ts-check-changed-files.ts",
     "translate-locales": "ts-node scripts/check-missing-translations.ts",
-    "stripe:listen": "stripe listen --forward-to http://app.cal.local:3000/api/integrations/stripepayment/webhook"
+    "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/stripe/webhook"
   },
   "engines": {
     "yarn": "3.4.1"
