--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,47 +16,47 @@ on:
 permissions:
   actions: write
   contents: read
+  pull-requests: read
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || (github.event.workflow_run && github.event.workflow_run.pull_requests && github.event.workflow_run.pull_requests[0].number) || github.run_id }}
   cancel-in-progress: true
 
 jobs:
   download-context:
-    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     outputs:
       pr_number: ${{ steps.get-context.outputs.pr_number }}
       pr_sha: ${{ steps.get-context.outputs.pr_sha }}
     steps:
       - name: Download PR context
+        if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
         uses: actions/github-script@v7
         with:
           script: |
             let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: context.payload.workflow_run.id,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.payload.workflow_run.id,
             });
-            
             let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
               return artifact.name == "pr-context"
             })[0];
-            
             let download = await github.rest.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: matchArtifact.id,
+              archive_format: 'zip',
             });
-            
             let fs = require('fs');
             fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/pr-context.zip`, Buffer.from(download.data));
-            
+
       - name: Extract context
+        if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
         run: unzip pr-context.zip
-        
+
       - name: Parse context
+        if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
         id: get-context
         uses: actions/github-script@v7
         with:
@@ -207,7 +207,7 @@ jobs:
 
   integration-test:
     name: Tests
-    needs: [changes, check-label, deps]
+    needs: [changes, check-label, build, build-api-v1, build-api-v2]
     if: ${{ needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
     uses: ./.github/workflows/integration-tests.yml
     secrets: inherit
@@ -314,5 +314,5 @@ jobs:
     runs-on: buildjet-2vcpu-ubuntu-2204
     steps:
       - name: fail if conditional jobs failed
-        if: needs.changes.outputs.has-files-requiring-all-checks == 'true' && (needs.changes.result == 'failure' || needs.lint.result == 'failure' || needs.type-check.result == 'failure' || needs.unit-test.result == 'failure' || needs.integration-test.result == 'failure' || needs.check-label.result == 'failure' || (needs.check-label.outputs.run-e2e == 'true' && (needs.build.result == 'failure' || needs.build-api-v1.result == 'failure' || needs.build-api-v2.result == 'failure' || needs.build-atoms.result == 'failure' || needs.build-docs.result == 'failure' || needs.e2e.result == 'failure' || needs.e2e-api-v2.result == 'failure' || needs.e2e-embed.result == 'failure' || needs.e2e-embed-react.result == 'failure' || needs.e2e-app-store.result == 'failure' || needs.e2e-atoms.result == 'failure')))
+        if: needs.changes.outputs.has-files-requiring-all-checks == 'true' && (contains(needs.*.result, 'failure') || contains(needs.*.result, 'skipped') || contains(needs.*.result, 'cancelled'))
         run: exit 1
