Trying workflow_dispatch

--- a/.github/workflows/pr-label-check.yml
+++ b/.github/workflows/pr-label-check.yml
@@ -9,17 +9,29 @@ on:
 permissions:
   contents: read
   pull-requests: read
+  actions: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
   cancel-in-progress: true
 
 jobs:
-  call-pr-update:
+  trigger-pr-workflow:
     if: ${{ github.event.label.name == 'ready-for-e2e' }}
-    uses: ./.github/workflows/pr.yml
-    with:
-      pr_number: ${{ github.event.pull_request.number }}
-      pr_ref: ${{ github.event.pull_request.head.ref }}
-      pr_sha: ${{ github.event.pull_request.head.sha }}
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger PR workflow via workflow_dispatch
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'pr.yml',
+              ref: '${{ github.event.pull_request.head.ref }}',
+              inputs: {
+                pr_number: '${{ github.event.pull_request.number }}',
+                pr_ref: '${{ github.event.pull_request.head.ref }}',
+                pr_sha: '${{ github.event.pull_request.head.sha }}'
+              }
+            });
