--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -144,12 +144,12 @@ jobs:
     uses: ./.github/workflows/api-v2-production-build.yml
     secrets: inherit
 
-  build-atoms:
-    name: Production builds
-    needs: [changes, check-label, deps]
-    if: ${{ needs.check-label.outputs.run-e2e == 'true' && needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
-    uses: ./.github/workflows/atoms-production-build.yml
-    secrets: inherit
+  # build-atoms:
+  #   name: Production builds
+  #   needs: [changes, check-label, deps]
+  #   if: ${{ needs.check-label.outputs.run-e2e == 'true' && needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
+  #   uses: ./.github/workflows/atoms-production-build.yml
+  #   secrets: inherit
 
   build-docs:
     name: Production builds
