--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
   "dependencies": {
     "@daily-co/daily-js": "^0.83.1",
     "@evyweb/ioctopus": "^1.2.0",
-    "@next/third-parties": "15.5.2",
+    "@next/third-parties": "^15.5.2",
     "@vercel/functions": "^1.4.0",
     "city-timezones": "^1.2.1",
     "date-fns-tz": "^3.2.0",
